# SAQ

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
data/: README.md
docs/: implementation_notes.md  saq_codeflow.md
include/: README.md
include/index/: ivf_index.h
include/index/fast_scan/: fast_scan.h
include/saq/: bit_allocation_dp.h  caq_code_adjustment.h  caq_encoder.h  caq_estimator.h  cluster_data.h  cluster_packer.h  code_helper.h  config.h  defines.h  dimension_segmentation.h  distance_estimator.h  fast_scan.h  initializer.h  io_utils.h  ivf_index.h  lut.h  memory.h  pca_projection.h  pool.h  quantization_plan.h  quantizer.h  rotator.h  saq_estimator.h  saq_quantizer.h  saq_searcher.h  simd_kernels.h  single_data.h  stopw.h  tools.h
python/: README.md  benchmark_saq.py  ivf_clustering.py  requirements.txt  setup.py
python/bindings/: CMakeLists.txt  saq_bindings.cpp
python/preprocessing/: compute_gt.py  ivf.py  pca.py
python/preprocessing/utils/: io.py
python/saq/: __init__.py
results/: python_benchmark.txt
results/dbpedia/: dbpedia_100k_results.txt
results/openmp_1t/: benchmark.txt
results/openmp_4t/: benchmark.txt
results/openmp_8t/: benchmark.txt
results/saq/: dbpedia_100k_results.txt
sample/: saq_sample.cpp
samples/: CMakeLists.txt  README.md  download_dbpedia.py  saq_dbpedia_sample.cpp
src/: CMakeLists.txt  README.md  bit_allocation_dp.cpp  caq_code_adjustment.cpp  caq_encoder.cpp  caq_estimator.cpp  cluster_data.cpp  cluster_packer.cpp  dimension_segmentation.cpp  distance_estimator.cpp  fast_scan.cpp  ivf_index.cpp  lut.cpp  pca_projection.cpp  quantization_plan.cpp  quantizer.cpp  rotator.cpp  saq_estimator.cpp  saq_quantizer.cpp  saq_searcher.cpp  simd_kernels.cpp  single_data.cpp
tests/: bit_allocation_dp_test.cpp  pca_projection_test.cpp  saq_quantizer_test.cpp
